--- a/index.html
+++ b/index.html
@@ -8,35 +8,66 @@
   
   <title>Frontend Mentor | Intro component with sign up form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Eric Meyer CSS reset -->
+  <link rel="stylesheet" href="css/cssreset.css">
+
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+  <div class="header">
+    <h1>
+      Learn to code by watching others
+    </h1>
+    <p>
+      See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+      but understanding how developers think is invaluable. 
+    </p>
+  </div>
   
+  <div class="content">
+    <div class="description">
+      <strong>Try it free 7 days</strong> then $20/mo. thereafter
+    </div>
+    <form onsubmit="submitForm(); return false;" autocomplete="on" id="main-form">
+
+      <div class="formitem">
+        <input type="text" placeholder="First Name" name="firstname" id="firstname" class="non-empty">
+        <img src="images/icon-error.svg" alt="Error" class="erroricon">
+        <p class="errormsg"></p>
+      </div>
+      <div class="formitem">
+        <input type="text" placeholder="Last Name" name="lastname" id="lastname" class="non-empty">
+        <img src="images/icon-error.svg" alt="Error" class="erroricon">
+        <p class="errormsg"></p>
+      </div>
+      <div class="formitem">
+        <input type="text" placeholder="Email Address" name="email" id="email" class="non-empty">
+        <img src="images/icon-error.svg" alt="Error" class="erroricon">
+        <p class="errormsg"></p>
+      </div>
+      <div class="formitem">
+        <input type="password" placeholder="Password" name="password" id="password" class="non-empty">
+        <img src="images/icon-error.svg" alt="Error" class="erroricon">
+        <p class="errormsg"></p>
+      </div>
+      <div class="formitem">
+        <input type="submit" value="Claim your free trial" id="submit">
+      </div>
+      
+      <div class="reminder">
+        By clicking the button, you are agreeing to our <strong>Terms and Services</strong>
+      </div>
+    </form>
+  </div>
+
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
