--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Sang Dang</a>.
     </p>
   </footer>
   <script src="js/script.js"></script>
